# forex-predict-mcp

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/forex_predict_mcp/: __init__.py  features.py  predict.py  server.py
src/forex_predict_mcp/tickers/: __init__.py  eurusd.py  gbpusd.py
tests/: conftest.py  test_features.py  test_predict.py
